workspace/IBEX2.0/ibex-2.0.4/__build__/src/parser/parser.output
Terminals unused in grammar

   TK_FUNC_RET_SYMBOL
   TK_STRING
   TK_BOOL
   TK_ASSIGN
   TK_BEGIN
   TK_FROM
   TK_TO
   TK_UNION
   TK_INTERSEC


Grammar

    0 $accept: program $end

    1 $@1: /* empty */

    2 program: $@1 system

    3 $@2: /* empty */

    4 program: $@2 choco_ctr

    5 $@3: /* empty */

    6 program: $@3 decl_fnc

    7 system: decl_opt_cst TK_VARS decl_var_list ';' decl_opt_par decl_fnc_list decl_opt_goal decl_opt_ctrs

    8 choco_ctr: ctr_blk_list

    9 decl_opt_cst: /* empty */
   10             | TK_CONST decl_cst_list ';'

   11 decl_cst_list: decl_cst
   12              | decl_cst_list ';' decl_cst

   13 decl_cst: TK_NEW_SYMBOL dimension TK_EQU expr
   14         | TK_NEW_SYMBOL dimension TK_IN expr

   15 decl_opt_par: /* empty */
   16             | TK_PARAM decl_par_list ';'

   17 decl_par_list: decl_par
   18              | decl_par_list ';' decl_par
   19              | decl_par_list ',' decl_par

   20 decl_par: '!' decl_entity
   21         | decl_entity

   22 decl_var_list: decl_var
   23              | decl_var_list ';' decl_var
   24              | decl_var_list ',' decl_var

   25 decl_var: decl_entity

   26 decl_entity: TK_NEW_SYMBOL dimension
   27            | TK_NEW_SYMBOL dimension TK_IN expr

   28 dimension: /* empty */
   29          | '[' expr ']'
   30          | '[' expr ']' '[' expr ']'
   31          | '[' expr ']' '[' expr ']' '[' expr ']'

   32 interval: '[' expr ',' expr ']'

   33 decl_fnc_list: decl_fnc_list decl_fnc
   34              | /* empty */

   35 $@4: /* empty */

   36 decl_fnc: TK_FUNCTION $@4 TK_NEW_SYMBOL '(' fnc_inpt_list ')' fnc_code TK_RETURN expr semicolon_opt TK_END

   37 semicolon_opt: ';'
   38              | /* empty */

   39 fnc_inpt_list: fnc_inpt_list ',' fnc_input
   40              | fnc_input

   41 fnc_input: TK_NEW_SYMBOL dimension

   42 fnc_code: fnc_code fnc_assign ';'
   43         | /* empty */

   44 fnc_assign: TK_NEW_SYMBOL TK_EQU expr
   45           | TK_CONSTANT TK_EQU expr

   46 decl_opt_goal: /* empty */
   47              | TK_MINIMIZE expr semicolon_opt

   48 decl_opt_ctrs: /* empty */
   49              | TK_CTRS ctr_blk_list TK_END

   50 ctr_blk_list: ctr_blk_list_ semicolon_opt

   51 ctr_blk_list_: ctr_blk_list_ ';' ctr_blk
   52              | ctr_blk

   53 ctr_blk: ctr_loop
   54        | ctr

   55 $@5: /* empty */

   56 ctr_loop: TK_FOR TK_NEW_SYMBOL TK_EQU expr ':' expr ';' $@5 ctr_blk_list_ semicolon_opt TK_END

   57 ctr: expr TK_EQU expr
   58    | expr TK_LEQ expr
   59    | expr TK_GEQ expr
   60    | expr '<' expr
   61    | expr '>' expr
   62    | '(' ctr ')'

   63 expr: expr '+' expr
   64     | expr '*' expr
   65     | expr '-' expr
   66     | expr '/' expr
   67     | TK_MAX '(' expr ',' expr ')'
   68     | TK_MIN '(' expr ',' expr ')'
   69     | TK_ATAN2 '(' expr ',' expr ')'
   70     | '-' expr
   71     | TK_ABS '(' expr ')'
   72     | TK_SIGN '(' expr ')'
   73     | expr '\''
   74     | TK_SQRT '(' expr ')'
   75     | TK_EXPO '(' expr ')'
   76     | TK_LOG '(' expr ')'
   77     | TK_COS '(' expr ')'
   78     | TK_SIN '(' expr ')'
   79     | TK_TAN '(' expr ')'
   80     | TK_ACOS '(' expr ')'
   81     | TK_ASIN '(' expr ')'
   82     | TK_ATAN '(' expr ')'
   83     | TK_COSH '(' expr ')'
   84     | TK_SINH '(' expr ')'
   85     | TK_TANH '(' expr ')'
   86     | TK_ACOSH '(' expr ')'
   87     | TK_ASINH '(' expr ')'
   88     | TK_ATANH '(' expr ')'
   89     | '+' expr
   90     | '(' expr ')'
   91     | '<' expr ',' expr '>'
   92     | expr '^' expr
   93     | expr '[' expr ']'
   94     | expr '(' expr ')'
   95     | expr '(' expr ',' expr ')'
   96     | expr '(' expr ',' expr ',' expr ')'
   97     | '(' expr_row ')'
   98     | '(' expr_col ')'
   99     | TK_ENTITY
  100     | '{' TK_INTEGER '}'
  101     | TK_ITERATOR
  102     | TK_FUNC_INP_SYMBOL
  103     | TK_FUNC_TMP_SYMBOL
  104     | TK_CONSTANT
  105     | TK_FUNC_SYMBOL '(' expr ')'
  106     | TK_FUNC_SYMBOL '(' expr_row ')'
  107     | TK_NEW_SYMBOL
  108     | TK_FLOAT
  109     | TK_INFINITY
  110     | TK_INTEGER
  111     | interval
  112     | TK_INF '(' expr ')'
  113     | TK_MID '(' expr ')'
  114     | TK_SUP '(' expr ')'

  115 expr_row: expr_row ',' expr
  116         | expr ',' expr

  117 expr_col: expr_col ';' expr
  118         | expr ';' expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 20
'\'' (39) 73
'(' (40) 36 62 67 68 69 71 72 74 75 76 77 78 79 80 81 82 83 84 85 86
    87 88 90 94 95 96 97 98 105 106 112 113 114
')' (41) 36 62 67 68 69 71 72 74 75 76 77 78 79 80 81 82 83 84 85 86
    87 88 90 94 95 96 97 98 105 106 112 113 114
'*' (42) 64
'+' (43) 63 89
',' (44) 19 24 32 39 67 68 69 91 95 96 115 116
'-' (45) 65 70
'/' (47) 66
':' (58) 56
';' (59) 7 10 12 16 18 23 37 42 51 56 117 118
'<' (60) 60 91
'>' (62) 61 91
'[' (91) 29 30 31 32 93
']' (93) 29 30 31 32 93
'^' (94) 92
'{' (123) 100
'}' (125) 100
error (256)
TK_CONSTANT (258) 45 104
TK_NEW_SYMBOL (259) 13 14 26 27 36 41 44 56 107
TK_FUNC_SYMBOL (260) 105 106
TK_FUNC_RET_SYMBOL (261)
TK_FUNC_INP_SYMBOL (262) 102
TK_FUNC_TMP_SYMBOL (263) 103
TK_ENTITY (264) 99
TK_ITERATOR (265) 101
TK_STRING (266)
TK_INTEGER (267) 100 110
TK_FLOAT (268) 108
TK_INFINITY (269) 109
TK_BOOL (270)
TK_PARAM (271) 16
TK_CONST (272) 10
TK_VARS (273) 7
TK_FUNCTION (274) 36
TK_MIN (275) 68
TK_MAX (276) 67
TK_INF (277) 112
TK_MID (278) 113
TK_SUP (279) 114
TK_SIGN (280) 72
TK_ABS (281) 71
TK_SQRT (282) 74
TK_EXPO (283) 75
TK_LOG (284) 76
TK_COS (285) 77
TK_SIN (286) 78
TK_TAN (287) 79
TK_ACOS (288) 80
TK_ASIN (289) 81
TK_ATAN (290) 82
TK_ATAN2 (291) 69
TK_COSH (292) 83
TK_SINH (293) 84
TK_TANH (294) 85
TK_ACOSH (295) 86
TK_ASINH (296) 87
TK_ATANH (297) 88
TK_LEQ (298) 58
TK_GEQ (299) 59
TK_EQU (300) 13 44 45 56 57
TK_ASSIGN (301)
TK_BEGIN (302)
TK_END (303) 36 49 56
TK_FOR (304) 56
TK_FROM (305)
TK_TO (306)
TK_RETURN (307) 36
TK_CTRS (308) 49
TK_MINIMIZE (309) 47
TK_IN (310) 14 27
TK_UNION (311)
TK_INTERSEC (312)


Nonterminals, with rules where they appear

$accept (76)
    on left: 0
program (77)
    on left: 2 4 6, on right: 0
$@1 (78)
    on left: 1, on right: 2
$@2 (79)
    on left: 3, on right: 4
$@3 (80)
    on left: 5, on right: 6
system (81)
    on left: 7, on right: 2
choco_ctr (82)
    on left: 8, on right: 4
decl_opt_cst (83)
    on left: 9 10, on right: 7
decl_cst_list (84)
    on left: 11 12, on right: 10 12
decl_cst (85)
    on left: 13 14, on right: 11 12
decl_opt_par (86)
    on left: 15 16, on right: 7
decl_par_list (87)
    on left: 17 18 19, on right: 16 18 19
decl_par (88)
    on left: 20 21, on right: 17 18 19
decl_var_list (89)
    on left: 22 23 24, on right: 7 23 24
decl_var (90)
    on left: 25, on right: 22 23 24
decl_entity (91)
    on left: 26 27, on right: 20 21 25
dimension (92)
    on left: 28 29 30 31, on right: 13 14 26 27 41
interval (93)
    on left: 32, on right: 111
decl_fnc_list (94)
    on left: 33 34, on right: 7 33
decl_fnc (95)
    on left: 36, on right: 6 33
$@4 (96)
    on left: 35, on right: 36
semicolon_opt (97)
    on left: 37 38, on right: 36 47 50 56
fnc_inpt_list (98)
    on left: 39 40, on right: 36 39
fnc_input (99)
    on left: 41, on right: 39 40
fnc_code (100)
    on left: 42 43, on right: 36 42
fnc_assign (101)
    on left: 44 45, on right: 42
decl_opt_goal (102)
    on left: 46 47, on right: 7
decl_opt_ctrs (103)
    on left: 48 49, on right: 7
ctr_blk_list (104)
    on left: 50, on right: 8 49
ctr_blk_list_ (105)
    on left: 51 52, on right: 50 51 56
ctr_blk (106)
    on left: 53 54, on right: 51 52
ctr_loop (107)
    on left: 56, on right: 53
$@5 (108)
    on left: 55, on right: 56
ctr (109)
    on left: 57 58 59 60 61 62, on right: 54 62
expr (110)
    on left: 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
    81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101
    102 103 104 105 106 107 108 109 110 111 112 113 114, on right:
    13 14 27 29 30 31 32 36 44 45 47 56 57 58 59 60 61 63 64 65 66
    67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
    88 89 90 91 92 93 94 95 96 105 112 113 114 115 116 117 118
expr_row (111)
    on left: 115 116, on right: 97 106 115
expr_col (112)
    on left: 117 118, on right: 98 117


state 0

    0 $accept: . program $end
    1 $@1: .  [TK_CONST, TK_VARS]
    2 program: . $@1 system
    3 $@2: .  [TK_CONSTANT, TK_NEW_SYMBOL, TK_FUNC_SYMBOL, TK_FUNC_INP_SYMBOL, TK_FUNC_TMP_SYMBOL, TK_ENTITY, TK_ITERATOR, TK_INTEGER, TK_FLOAT, TK_INFINITY, TK_MIN, TK_MAX, TK_INF, TK_MID, TK_SUP, TK_SIGN, TK_ABS, TK_SQRT, TK_EXPO, TK_LOG, TK_COS, TK_SIN, TK_TAN, TK_ACOS, TK_ASIN, TK_ATAN, TK_ATAN2, TK_COSH, TK_SINH, TK_TANH, TK_ACOSH, TK_ASINH, TK_ATANH, TK_FOR, '<', '+', '-', '[', '(', '{']
    4 program: . $@2 choco_ctr
    5 $@3: .  [TK_FUNCTION]
    6 program: . $@3 decl_fnc

    TK_CONST     reduce using rule 1 ($@1)
    TK_VARS      reduce using rule 1 ($@1)
    TK_FUNCTION  reduce using rule 5 ($@3)
    $default     reduce using rule 3 ($@2)

    program  go to state 1
    $@1      go to state 2
    $@2      go to state 3
    $@3      go to state 4


state 1

    0 $accept: program . $end

    $end  shift, and go to state 5


state 2

    2 program: $@1 . system
    7 system: . decl_opt_cst TK_VARS decl_var_list ';' decl_opt_par decl_fnc_list decl_opt_goal decl_opt_ctrs
    9 decl_opt_cst: .  [TK_VARS]
   10             | . TK_CONST decl_cst_list ';'

    TK_CONST  shift, and go to state 6

    $default  reduce using rule 9 (decl_opt_cst)

    system        go to state 7
    decl_opt_cst  go to state 8


state 3

    4 program: $@2 . choco_ctr
    8 choco_ctr: . ctr_blk_list
   32 interval: . '[' expr ',' expr ']'
   50 ctr_blk_list: . ctr_blk_list_ semicolon_opt
   51 ctr_blk_list_: . ctr_blk_list_ ';' ctr_blk
   52              | . ctr_blk
   53 ctr_blk: . ctr_loop
   54        | . ctr
   56 ctr_loop: . TK_FOR TK_NEW_SYMBOL TK_EQU expr ':' expr ';' $@5 ctr_blk_list_ semicolon_opt TK_END
   57 ctr: . expr TK_EQU expr
   58    | . expr TK_LEQ expr
   59    | . expr TK_GEQ expr
   60    | . expr '<' expr
   61    | . expr '>' expr
   62    | . '(' ctr ')'
   63 expr: . expr '+' expr
   64     | . expr '*' expr
   65     | . expr '-' expr
   66     | . expr '/' expr
   67     | . TK_MAX '(' expr ',' expr ')'
   68     | . TK_MIN '(' expr ',' expr ')'
   69     | . TK_ATAN2 '(' expr ',' expr ')'
   70     | . '-' expr
   71     | . TK_ABS '(' expr ')'
   72     | . TK_SIGN '(' expr ')'
   73     | . expr '\''
   74     | . TK_SQRT '(' expr ')'
   75     | . TK_EXPO '(' expr ')'
   76     | . TK_LOG '(' expr ')'
   77     | . TK_COS '(' expr ')'
   78     | . TK_SIN '(' expr ')'
   79     | . TK_TAN '(' expr ')'
   80     | . TK_ACOS '(' expr ')'
   81     | . TK_ASIN '(' expr ')'
   82     | . TK_ATAN '(' expr ')'
   83     | . TK_COSH '(' expr ')'
   84     | . TK_SINH '(' expr ')'
   85     | . TK_TANH '(' expr ')'
   86     | . TK_ACOSH '(' expr ')'
   87     | . TK_ASINH '(' expr ')'
   88     | . TK_ATANH '(' expr ')'
   89     | . '+' expr
   90     | . '(' expr ')'
   91     | . '<' expr ',' expr '>'
   92     | . expr '^' expr
   93     | . expr '[' expr ']'
   94     | . expr '(' expr ')'
   95     | . expr '(' expr ',' expr ')'
   96     | . expr '(' expr ',' expr ',' expr ')'
   97     | . '(' expr_row ')'
   98     | . '(' expr_col ')'
   99     | . TK_ENTITY
  100     | . '{' TK_INTEGER '}'
  101     | . TK_ITERATOR
  102     | . TK_FUNC_INP_SYMBOL
  103     | . TK_FUNC_TMP_SYMBOL
  104     | . TK_CONSTANT
  105     | . TK_FUNC_SYMBOL '(' expr ')'
  106     | . TK_FUNC_SYMBOL '(' expr_row ')'
  107     | . TK_NEW_SYMBOL
  108     | . TK_FLOAT
  109     | . TK_INFINITY
  110     | . TK_INTEGER
  111     | . interval
  112     | . TK_INF '(' expr ')'
  113     | . TK_MID '(' expr ')'
  114     | . TK_SUP '(' expr ')'

    TK_CONSTANT         shift, and go to state 9
    TK_NEW_SYMBOL       shift, and go to state 10
    TK_FUNC_SYMBOL      shift, and go to state 11
    TK_FUNC_INP_SYMBOL  shift, and go to state 12
    TK_FUNC_TMP_SYMBOL  shift, and go to state 13
    TK_ENTITY           shift, and go to state 14
    TK_ITERATOR         shift, and go to state 15
    TK_INTEGER          shift, and go to state 16
    TK_FLOAT            shift, and go to state 17
    TK_INFINITY         shift, and go to state 18
    TK_MIN              shift, and go to state 19
    TK_MAX              shift, and go to state 20
    TK_INF              shift, and go to state 21
    TK_MID              shift, and go to state 22
    TK_SUP              shift, and go to state 23
    TK_SIGN             shift, and go to state 24
    TK_ABS              shift, and go to state 25
    TK_SQRT             shift, and go to state 26
    TK_EXPO             shift, and go to state 27
    TK_LOG              shift, and go to state 28
    TK_COS              shift, and go to state 29
    TK_SIN              shift, and go to state 30
    TK_TAN              shift, and go to state 31
    TK_ACOS             shift, and go to state 32
    TK_ASIN             shift, and go to state 33
    TK_ATAN             shift, and go to state 34
    TK_ATAN2            shift, and go to state 35
    TK_COSH             shift, and go to state 36
    TK_SINH             shift, and go to state 37
    TK_TANH             shift, and go to state 38
    TK_ACOSH            shift, and go to state 39
    TK_ASINH            shift, and go to state 40
    TK_ATANH            shift, and go to state 41
    TK_FOR              shift, and go to state 42
    '<'                 shift, and go to state 43
    '+'                 shift, and go to state 44
    '-'                 shift, and go to state 45
    '['                 shift, and go to state 46
    '('                 shift, and go to state 47
    '{'                 shift, and go to state 48

    choco_ctr      go to state 49
    interval       go to state 50
    ctr_blk_list   go to state 51
    ctr_blk_list_  go to state 52
    ctr_blk        go to state 53
    ctr_loop       go to state 54
    ctr            go to state 55
    expr           go to state 56


state 4

    6 program: $@3 . decl_fnc
   36 decl_fnc: . TK_FUNCTION $@4 TK_NEW_SYMBOL '(' fnc_inpt_list ')' fnc_code TK_RETURN expr semicolon_opt TK_END

    TK_FUNCTION  shift, and go to state 57

    decl_fnc  go to state 58


state 5

    0 $accept: program $end .

    $default  accept


state 6

   10 decl_opt_cst: TK_CONST . decl_cst_list ';'
   11 decl_cst_list: . decl_cst
   12              | . decl_cst_list ';' decl_cst
   13 decl_cst: . TK_NEW_SYMBOL dimension TK_EQU expr
   14         | . TK_NEW_SYMBOL dimension TK_IN expr

    TK_NEW_SYMBOL  shift, and go to state 59

    decl_cst_list  go to state 60
    decl_cst       go to state 61


state 7

    2 program: $@1 system .

    $default  reduce using rule 2 (program)


state 8

    7 system: decl_opt_cst . TK_VARS decl_var_list ';' decl_opt_par decl_fnc_list decl_opt_goal decl_opt_ctrs

    TK_VARS  shift, and go to state 62


state 9

  104 expr: TK_CONSTANT .

    $default  reduce using rule 104 (expr)


state 10

  107 expr: TK_NEW_SYMBOL .

    $default  reduce using rule 107 (expr)


state 11

  105 expr: TK_FUNC_SYMBOL . '(' expr ')'
  106     | TK_FUNC_SYMBOL . '(' expr_row ')'

    '('  shift, and go to state 63


state 12

  102 expr: TK_FUNC_INP_SYMBOL .

    $default  reduce using rule 102 (expr)


state 13

  103 expr: TK_FUNC_TMP_SYMBOL .

    $default  reduce using rule 103 (expr)


state 14

   99 expr: TK_ENTITY .

    $default  reduce using rule 99 (expr)


state 15

  101 expr: TK_ITERATOR .

    $default  reduce using rule 101 (expr)


state 16

  110 expr: TK_INTEGER .

    $default  reduce using rule 110 (expr)


state 17

  108 expr: TK_FLOAT .

    $default  reduce using rule 108 (expr)


state 18

  109 expr: TK_INFINITY .

    $default  reduce using rule 109 (expr)


state 19

   68 expr: TK_MIN . '(' expr ',' expr ')'

    '('  shift, and go to state 64


state 20

   67 expr: TK_MAX . '(' expr ',' expr ')'

    '('  shift, and go to state 65


state 21

  112 expr: TK_INF . '(' expr ')'

    '('  shift, and go to state 66


state 22

  113 expr: TK_MID . '(' expr ')'

    '('  shift, and go to state 67


state 23

  114 expr: TK_SUP . '(' expr ')'

    '('  shift, and go to state 68


state 24

   72 expr: TK_SIGN . '(' expr ')'

    '('  shift, and go to state 69


state 25

   71 expr: TK_ABS . '(' expr ')'

    '('  shift, and go to state 70


state 26

   74 expr: TK_SQRT . '(' expr ')'

    '('  shift, and go to state 71


state 27

   75 expr: TK_EXPO . '(' expr ')'

    '('  shift, and go to state 72


state 28

   76 expr: TK_LOG . '(' expr ')'

    '('  shift, and go to state 73


state 29

   77 expr: TK_COS . '(' expr ')'

    '('  shift, and go to state 74


state 30

   78 expr: TK_SIN . '(' expr ')'

    '('  shift, and go to state 75


state 31

   79 expr: TK_TAN . '(' expr ')'

    '('  shift, and go to state 76


state 32

   80 expr: TK_ACOS . '(' expr ')'

    '('  shift, and go to state 77


state 33

   81 expr: TK_ASIN . '(' expr ')'

    '('  shift, and go to state 78


state 34

   82 expr: TK_ATAN . '(' expr ')'

    '('  shift, and go to state 79


state 35

   69 expr: TK_ATAN2 . '(' expr ',' expr ')'

    '('  shift, and go to state 80


state 36

   83 expr: TK_COSH . '(' expr ')'

    '('  shift, and go to state 81


state 37

   84 expr: TK_SINH . '(' expr ')'

    '('  shift, and go to state 82


state 38

   85 expr: TK_TANH . '(' expr ')'

    '('  shift, and go to state 83


state 39

   86 expr: TK_ACOSH . '(' expr ')'

    '('  shift, and go to state 84


state 40

   87 expr: TK_ASINH . '(' expr ')'

    '('  shift, and go to state 85


state 41

   88 expr: TK_ATANH . '(' expr ')'

    '('  shift, and go to state 86


state 42

   56 ctr_loop: TK_FOR . TK_NEW_SYMBOL TK_EQU expr ':' expr ';' $@5 ctr_blk_list_ semicolon_opt TK_END

    TK_NEW_SYMBOL  shift, and go to state 87


state 43

   32 interval: . '[' expr ',' expr ']'
   63 expr: . expr '+' expr
   64     | . expr '*' expr
   65     | . expr '-' expr
   66     | . expr '/' expr
   67     | . TK_MAX '(' expr ',' expr ')'
   68     | . TK_MIN '(' expr ',' expr ')'
   69     | . TK_ATAN2 '(' expr ',' expr ')'
   70     | . '-' expr
   71     | . TK_ABS '(' expr ')'
   72     | . TK_SIGN '(' expr ')'
   73     | . expr '\''
   74     | . TK_SQRT '(' expr ')'
   75     | . TK_EXPO '(' expr ')'
   76     | . TK_LOG '(' expr ')'
   77     | . TK_COS '(' expr ')'
   78     | . TK_SIN '(' expr ')'
   79     | . TK_TAN '(' expr ')'
   80     | . TK_ACOS '(' expr ')'
   81     | . TK_ASIN '(' expr ')'
   82     | . TK_ATAN '(' expr ')'
   83     | . TK_COSH '(' expr ')'
   84     | . TK_SINH '(' expr ')'
   85     | . TK_TANH '(' expr ')'
   86     | . TK_ACOSH '(' expr ')'
   87     | . TK_ASINH '(' expr ')'
   88     | . TK_ATANH '(' expr ')'
   89     | . '+' expr
   90     | . '(' expr ')'
   91     | . '<' expr ',' expr '>'
   91     | '<' . expr ',' expr '>'
   92     | . expr '^' expr
   93     | . expr '[' expr ']'
   94     | . expr '(' expr ')'
   95     | . expr '(' expr ',' expr ')'
   96     | . expr '(' expr ',' expr ',' expr ')'
   97     | . '(' expr_row ')'
   98     | . '(' expr_col ')'
   99     | . TK_ENTITY
  100     | . '{' TK_INTEGER '}'
  101     | . TK_ITERATOR
  102     | . TK_FUNC_INP_SYMBOL
  103     | . TK_FUNC_TMP_SYMBOL
  104     | . TK_CONSTANT
  105     | . TK_FUNC_SYMBOL '(' expr ')'
  106     | . TK_FUNC_SYMBOL '(' expr_row ')'
  107     | . TK_NEW_SYMBOL
  108     | . TK_FLOAT
  109     | . TK_INFINITY
  110     | . TK_INTEGER
  111     | . interval
  112     | . TK_INF '(' expr ')'
  113     | . TK_MID '(' expr ')'
  114     | . TK_SUP '(' expr ')'

    TK_CONSTANT         shift, and go to state 9
    TK_NEW_SYMBOL       shift, and go to state 10
    TK_FUNC_SYMBOL      shift, and go to state 11
    TK_FUNC_INP_SYMBOL  shift, and go to state 12
    TK_FUNC_TMP_SYMBOL  shift, and go to state 13
    TK_ENTITY           shift, and go to state 14
    TK_ITERATOR         shift, and go to state 15
    TK_INTEGER          shift, and go to state 16
    TK_FLOAT            shift, and go to state 17
    TK_INFINITY         shift, and go to state 18
    TK_MIN              shift, and go to state 19
    TK_MAX              shift, and go to state 20
    TK_INF              shift, and go to state 21
    TK_MID              shift, and go to state 22
    TK_SUP              shift, and go to state 23
    TK_SIGN             shift, and go to state 24
    TK_ABS              shift, and go to state 25
    TK_SQRT             shift, and go to state 26
    TK_EXPO             shift, and go to state 27
    TK_LOG              shift, and go to state 28
    TK_COS              shift, and go to state 29
    TK_SIN              shift, and go to state 30
    TK_TAN              shift, and go to state 31
    TK_ACOS             shift, and go to state 32
    TK_ASIN             shift, and go to state 33
    TK_ATAN             shift, and go to state 34
    TK_ATAN2            shift, and go to state 35
    TK_COSH             shift, and go to state 36
    TK_SINH             shift, and go to state 37
    TK_TANH             shift, and go to state 38
    TK_ACOSH            shift, and go to state 39
    TK_ASINH            shift, and go to state 40
    TK_ATANH            shift, and go to state 41
    '<'                 shift, and go to state 43
    '+'                 shift, and go to state 44
    '-'                 shift, and go to state 45
    '['                 shift, and go to state 46
    '('                 shift, and go to state 88
    '{'                 shift, and go to state 48

    interval  go to state 50
    expr      go to state 89


state 44

   32 interval: . '[' expr ',' expr ']'
   63 expr: . expr '+' expr
   64     | . expr '*' expr
   65     | . expr '-' expr
   66     | . expr '/' expr
   67     | . TK_MAX '(' expr ',' expr ')'
   68     | . TK_MIN '(' expr ',' expr ')'
   69     | . TK_ATAN2 '(' expr ',' expr ')'
   70     | . '-' expr
   71     | . TK_ABS '(' expr ')'
   72     | . TK_SIGN '(' expr ')'
   73     | . expr '\''
   74     | . TK_SQRT '(' expr ')'
   75     | . TK_EXPO '(' expr ')'
   76     | . TK_LOG '(' expr ')'
   77     | . TK_COS '(' expr ')'
   78     | . TK_SIN '(' expr ')'
   79     | . TK_TAN '(' expr ')'
   80     | . TK_ACOS '(' expr ')'
   81     | . TK_ASIN '(' expr ')'
   82     | . TK_ATAN '(' expr ')'
   83     | . TK_COSH '(' expr ')'
   84     | . TK_SINH '(' expr ')'
   85     | . TK_TANH '(' expr ')'
   86     | . TK_ACOSH '(' expr ')'
   87     | . TK_ASINH '(' expr ')'
   88     | . TK_ATANH '(' expr ')'
   89     | . '+' expr
   89     | '+' . expr
   90     | . '(' expr ')'
   91     | . '<' expr ',' expr '>'
   92     | . expr '^' expr
   93     | . expr '[' expr ']'
   94     | . expr '(' expr ')'
   95     | . expr '(' expr ',' expr ')'
   96     | . expr '(' expr ',' expr ',' expr ')'
   97     | . '(' expr_row ')'
   98     | . '(' expr_col ')'
   99     | . TK_ENTITY
  100     | . '{' TK_INTEGER '}'
  101     | . TK_ITERATOR
  102     | . TK_FUNC_INP_SYMBOL
  103     | . TK_FUNC_TMP_SYMBOL
  104     | . TK_CONSTANT
  105     | . TK_FUNC_SYMBOL '(' expr ')'
  106     | . TK_FUNC_SYMBOL '(' expr_row ')'
  107     | . TK_NEW_SYMBOL
  108     | . TK_FLOAT
  109     | . TK_INFINITY
  110     | . TK_INTEGER
  111     | . interval
  112     | . TK_INF '(' expr ')'
  113     | . TK_MID '(' expr ')'
  114     | . TK_SUP '(' expr ')'

    TK_CONSTANT         shift, and go to state 9
    TK_NEW_SYMBOL       shift, and go to state 10
    TK_FUNC_SYMBOL      shift, and go to state 11
    TK_FUNC_INP_SYMBOL  shift, and go to state 12
    TK_FUNC_TMP_SYMBOL  shift, and go to state 13
    TK_ENTITY           shift, and go to state 14
    TK_ITERATOR         shift, and go to state 15
    TK_INTEGER          shift, and go to state 16
    TK_FLOAT            shift, and go to state 17
    TK_INFINITY         shift, and go to state 18
    TK_MIN              shift, and go to state 19
    TK_MAX              shift, and go to state 20
    TK_INF              shift, and go to state 21
    TK_MID              shift, and go to state 22
    TK_SUP              shift, and go to state 23
    TK_SIGN             shift, and go to state 24
    TK_ABS              shift, and go to state 25
    TK_SQRT             shift, and go to state 26
    TK_EXPO             shift, and go to state 27
    TK_LOG              shift, and go to state 28
    TK_COS              shift, and go to state 29
    TK_SIN              shift, and go to state 30
    TK_TAN              shift, and go to state 31
    TK_ACOS             shift, and go to state 32
    TK_ASIN             shift, and go to state 33
    TK_ATAN             shift, and go to state 34
    TK_ATAN2            shift, and go to state 35
    TK_COSH             shift, and go to state 36
    TK_SINH             shift, and go to state 37
    TK_TANH             shift, and go to state 38
    TK_ACOSH            shift, and go to state 39
    TK_ASINH            shift, and go to state 40
    TK_ATANH            shift, and go to state 41
    '<'                 shift, and go to state 43
    '+'                 shift, and go to state 44
    '-'                 shift, and go to state 45
    '['                 shift, and go to state 46
    '('                 shift, and go to state 88
    '{'                 shift, and go to state 48

    interval  go to state 50
    expr      go to state 90


state 45

   32 interval: . '[' expr ',' expr ']'
   63 expr: . expr '+' expr
   64     | . expr '*' expr
   65     | . expr '-' expr
   66     | . expr '/' expr
   67     | . TK_MAX '(' expr ',' expr ')'
   68     | . TK_MIN '(' expr ',' expr ')'
   69     | . TK_ATAN2 '(' expr ',' expr ')'
   70     | . '-' expr
   70     | '-' . expr
   71     | . TK_ABS '(' expr ')'
   72     | . TK_SIGN '(' expr ')'
   73     | . expr '\''
   74     | . TK_SQRT '(' expr ')'
   75     | . TK_EXPO '(' expr ')'
   76     | . TK_LOG '(' expr ')'
   77     | . TK_COS '(' expr ')'
   78     | . TK_SIN '(' expr ')'
   79     | . TK_TAN '(' expr ')'
   80     | . TK_ACOS '(' expr ')'
   81     | . TK_ASIN '(' expr ')'
   82     | . TK_ATAN '(' expr ')'
   83     | . TK_COSH '(' expr ')'
   84     | . TK_SINH '(' expr ')'
   85     | . TK_TANH '(' expr ')'
   86     | . TK_ACOSH '(' expr ')'
   87     | . TK_ASINH '(' expr ')'
   88     | . TK_ATANH '(' expr ')'
   89     | . '+' expr
   90     | . '(' expr ')'
   91     | . '<' expr ',' expr '>'
   92     | . expr '^' expr
   93     | . expr '[' expr ']'
   94     | . expr '(' expr ')'
   95     | . expr '(' expr ',' expr ')'
   96     | . expr '(' expr ',' expr ',' expr ')'
   97     | . '(' expr_row ')'
   98     | . '(' expr_col ')'
   99     | . TK_ENTITY
  100     | . '{' TK_INTEGER '}'
  101     | . TK_ITERATOR
  102     | . TK_FUNC_INP_SYMBOL
  103     | . TK_FUNC_TMP_SYMBOL
  104     | . TK_CONSTANT
  105     | . TK_FUNC_SYMBOL '(' expr ')'
  106     | . TK_FUNC_SYMBOL '(' expr_row ')'
  107     | . TK_NEW_SYMBOL
  108     | . TK_FLOAT
  109     | . TK_INFINITY
  110     | . TK_INTEGER
  111     | . interval
  112     | . TK_INF '(' expr ')'
  113     | . TK_MID '(' expr ')'
  114     | . TK_SUP '(' expr ')'

    TK_CONSTANT         shift, and go to state 9
    TK_NEW_SYMBOL       shift, and go to state 10
    TK_FUNC_SYMBOL      shift, and go to state 11
    TK_FUNC_INP_SYMBOL  shift, and go to state 12
    TK_FUNC_TMP_SYMBOL  shift, and go to state 13
    TK_ENTITY           shift, and go to state 14
    TK_ITERATOR         shift, and go to state 15
    TK_INTEGER          shift, and go to state 16
    TK_FLOAT            shift, and go to state 17
    TK_INFINITY         shift, and go to state 18
    TK_MIN              shift, and go to state 19
    TK_MAX              shift, and go to state 20
    TK_INF              shift, and go to state 21
    TK_MID              shift, and go to state 22
    TK_SUP              shift, and go to state 23
    TK_SIGN             shift, and go to state 24
    TK_ABS              shift, and go to state 25
    TK_SQRT             shift, and go to state 26
    TK_EXPO             shift, and go to state 27
    TK_LOG              shift, and go to state 28
    TK_COS              shift, and go to state 29
    TK_SIN              shift, and go to state 30
    TK_TAN              shift, and go to state 31
    TK_ACOS             shift, and go to state 32
    TK_ASIN             shift, and go to state 33
    TK_ATAN             shift, and go to state 34
    TK_ATAN2            shift, and go to state 35
    TK_COSH             shift, and go to state 36
    TK_SINH             shift, and go to state 37
    TK_TANH             shift, and go to state 38
    TK_ACOSH            shift, and go to state 39
    TK_ASINH            shift, and go to state 40
    TK_ATANH            shift, and go to state 41
    '<'                 shift, and go to state 43
    '+'                 shift, and go to state 44
    '-'                 shift, and go to state 45
    '['                 shift, and go to state 46
    '('                 shift, and go to state 88
    '{'                 shift, and go to state 48
